added links from index to lasagna & vice versa

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 
 <body>
     <h1>Odin Recipes</h1>
+    <p>See the <a href="recipes/lasagna.html" target="_blank">Lasagna</a> 
+        page for te best recipe</p>
 </body>
 
 </html>
