--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <h1>Lasagna</h1>
+
+    <p>Click <a href="../index.html" target="_blank">here</a> to return to the homepage</p>
 </body>
 </html>
