--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -6,7 +6,28 @@
     <title>Lasagna Recipe</title>
 </head>
 <body>
-    <h1>Lasagna</h1>
+    <h1>Lasagna recipe</h1>
+    <img src="../images/lasagna.png" alt="Image of lasagna. flaky crust and melty cheese" height="150" width="150">
+    <p>The <i>perfect</i> recipe for a night in. Pasta 
+    layered with rocitta cheese and meat.</p>
+
+    <h2>ingredints needed</h2>
+
+    <h3>Cheese Filling</h3>
+    <ul>
+        <li>15 oz. ricotta cheese, 2 cups</li>
+        <li>1 large egg</li>
+        <li>2 cups mozzarella cheese</li>
+        <li>3/4 cups Parmeson Cheese</li>
+        <li>2 teaspoons Italian seasoning</li>
+    </ul>
+
+    <h3>Meat Sauce</h3>
+    <ul>
+        <li>Olive Oil</li>
+        <li>Yellow Onion</li>
+        <li>1 lbs Ground Beef</li>
+    </ul>
 
     <p>Click <a href="../index.html" target="_blank">here</a> to return to the homepage</p>
 </body>
