--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -27,7 +27,32 @@
         <li>Olive Oil</li>
         <li>Yellow Onion</li>
         <li>1 lbs Ground Beef</li>
-    </ul>
+    </ul><br>
+
+    <h2>Cooking Steps</h2>
+
+    <h3>Prep work<h3></h3>
+    <ol>
+        <li>Combine the <b>cheese filling ingredients</b> in a medium bowl and set aside. Measure out remaining ingredients.
+    </ol>
+
+    <h2>Meat Sauce</h2>
+    <ol>
+        <li>Heat olive oil over medium heat and add the diced onions. Let them soften for 10 minutes. 
+            (This allows them to release a little 
+            sugar which is a nice offset to the acidity of the tomatoes.)
+        </li>
+        <li>Add the ground beef and sausage and increase heat to medium-high. 
+            Use a spatula to break up the meat so that it’s very fine and crumbled. 
+            Cook for 8-10 minutes, or until cooked through. Add garlic during the last minute. 
+            Drain excess grease.
+        </li>
+        <li>Add the chicken broth and use a silicone spatula to “clean” the bottom and 
+            sides of the pot. Add the marinara sauce, tomato paste, hot sauce, and 
+            Worcestershire sauce. Bring to a boil, then reduce to a simmer. Cover 
+            partially and let the sauce simmer gently while you boil the pasta noodles.
+        </li>
+    </ol>
 
     <p>Click <a href="../index.html" target="_blank">here</a> to return to the homepage</p>
 </body>
