added a burger page and links to each recipe

--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
 
 <body>
     <h1>Odin Recipes</h1>
-    <p>See the <a href="recipes/lasagna.html" target="_blank">Lasagna</a> 
-        page for te best recipe</p>
+    <p>list of recipes</p>
+    <ul>
+        <li><a href="recipes/lasagna.html" target="_blank">Lasagna</a></li>
+        <li><a href="recipes/burger.html" target="_blank">Buger</a></li>
+    </ul>
+
 </body>
 
 </html>
