--- a/recipes/burger.html
+++ b/recipes/burger.html
@@ -3,9 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Burger</title>
 </head>
 <body>
-    
+    <h1>Burger Recipe</h1>
+    <img src="../images/burgerimg.png" alt="Burger Image - chared bun and some melty cheese" height="250" width="250">
+    <p>The perfect cookout <i>(or in)</i> with the Family</p>
+
+    <h2>Ingredients Needed</h2>
+    <ul>
+        <li>Bun</li>
+        <li>White Cheese</li>
+        <li>Patty (beef)</li>
+        <li>lettuce</li>
+        <li>Spread</li>
+    </ul><br>
+
+    <h2>Cooking / Assembly Steps</h2>
+    <h3>Cooking</h3>
+    <ol>
+        <li>prep the patty and preheat the oven to 475</li>
+        <li>place the patty in the oven and let it cook</li>
+        <li>take the patty out of the oven after 10 minutes</li>
+    </ol>
+
+    <h3>Assembly</h3>
+    <ol>
+        <li>place patty on the bottom bun</li>
+        <li>place the spreas on the top bun</li>
+        <li>place lettuce and cheese on teh patty</li>
+        <li>close the top patty on the burger</li>
+        <li>Enjoy</li>
+    </ol>
 </body>
 </html>
